Fix: Security and PreAuthorize